# BrowserSkill

./: .editorconfig  .gitignore  .stylelintignore  .stylelintrc.json  AGENT_INSTALL.md  Cargo.toml  README.md  README.zh-CN.md  biome.json  install.ps1  install.sh  package.json  pnpm-lock.yaml
crates/bsk-protocol/: Cargo.toml  README.md
crates/bsk-protocol/schema/: browser_list_params.json  cancel_params.json  cancel_result.json  handshake_params.json  handshake_result.json  system_ping_params.json  system_ping_result.json  system_status_params.json  system_status_result.json  tool_click_params.json  tool_click_result.json  tool_evaluate_error.json  tool_evaluate_params.json  tool_evaluate_result.json  tool_fill_params.json  tool_fill_result.json  tool_get_html_params.json  tool_get_html_result.json  tool_navigate_back_params.json  tool_navigate_back_result.json  tool_navigate_forward_params.json  tool_navigate_forward_result.json  tool_navigate_params.json  tool_navigate_result.json  tool_network_entry.json  tool_network_result.json  tool_press_params.json  tool_press_result.json  tool_record_await_params.json  tool_record_await_result.json  tool_record_start_params.json  tool_record_start_result.json  tool_record_stop_params.json  tool_record_stop_result.json  tool_reload_params.json  tool_reload_result.json  tool_request_help_params.json  tool_request_help_result.json  tool_screenshot_params.json  tool_screenshot_result.json  (+26 more)
crates/bsk-protocol/src/: cancel.rs  error.rs  frame.rs  lib.rs  method.rs  system.rs
crates/bsk-protocol/src/tools/: dialog.rs  mod.rs  (+10 more)
(+202 files in other folders)
